# GSHTrans

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GSHT/: Core
GSHT/src/: Indexing.h  Legendre.h  Wigner.h
GSHTrans/: All  Coefficient  Core  Expansion  Field  Legendre  MatrixField  Plan  ScalarField  VectorField  Wigner
GSHTrans/src/: #GaussLegendreGrid.h#  CanonicalBase.h  CanonicalCoefficients.h  CanonicalComponents.h  Coefficient.h  CoefficientBase.h  Components.h  Concepts.h  ExpansionBase.h  Field.h  FieldBase.h  Fields.h  FieldsBase.h  GLQGrid.h  GaussLegendreGrid.h  Grid.h  GridBase.h  Indexing.h  IndexingNew.h  IsotropicMatrixField.h  Legendre.h  MatrixField.h  Plan.h  ScalarCoefficient.h  ScalarField.h  TensorField.h  TensorIndices.h  Traits.h  Utility.h  VectorField.h  Views.h  Wigner.h  WignerNew.h  WignerOld.h
GSHTrans/src/CanonicalComponentExpansion/: CanonicalComponentExpansion.h  CanonicalComponentExpansionBase.h
GSHTrans/src/CanonicalComponentField/: CanonicalComponentField.h  CanonicalComponentFieldBase.h  CanonicalComponentFieldBinary.h  CanonicalComponentFieldOverloads.h  CanonicalComponentFieldUnary.h  CanonicalComponentUnary.h
GSHTrans/src/IsotropicMatrixField/: IsotropicMatrixField.h  IsotropicMatrixFieldBase.h
GSHTrans/src/MatrixField/: CanonicalMatrix.h  MatrixField.h  MatrixFieldBase.h  MatrixFieldExpressions.h  MatrixFieldOverloads.h  MatrixFieldView.h
GSHTrans/src/MatrixFieldOld/: IsotropicMatrixField.h  MatrixFieldBase.h  MatrixFieldOverloads.h
GSHTrans/src/ScalarField/: AbstractScalarField.h  ComplexifiedScalarField.h  ConstantScalarField.h  PointWiseUnaryScalarField.h  ScalarField.h  ScalarFieldBase.h  ScalarFieldBinary.h  ScalarFieldBinaryWithScalar.h  ScalarFieldExpressions.h  ScalarFieldOverloads.h  ScalarFieldPointwiseBinary.h  ScalarFieldPointwiseUnary.h  ScalarFieldPointwiseUnaryWithScalar.h  ScalarFieldUnary.h  ScalarFieldView.h
GSHTrans/src/ScalarFieldCoefficient/: ScalarFieldCoefficient.h  ScalarFieldCoefficientBase.h  ScalarFieldCoefficientOverloads.h  ScalarFieldCoefficientUnary.h
GSHTrans/src/ScalarFieldExpansion/: ScalarFieldExpansion.h  ScalarFieldExpansionBase.h  ScalarFieldExpansionBinary.h  ScalarFieldExpansionBinaryWithScalar.h  ScalarFieldExpansionOverloads.h  ScalarFieldExpansionUnary.h
GSHTrans/src/VectorField/: AbstractVectorField.h  CanonicalVector.h  ComplexifiedVectorField.h  ConstantVectorField.h  VectorField.h  VectorFieldBase.h  VectorFieldBinary.h  VectorFieldBinaryToScalarField.h  VectorFieldBinaryWithScalar.h  VectorFieldBinaryWithScalarField.h  VectorFieldComplexToImag.h  VectorFieldComplexToReal.h  VectorFieldComponent.h  VectorFieldConjugate.h  VectorFieldConstComponent.h  VectorFieldExpressions.h  VectorFieldOverloads.h  VectorFieldPointwiseUnary.h  VectorFieldPointwiseUnaryWithScalar.h  VectorFieldRealToComplex.h  VectorFieldUnary.h  VectorFieldView.h
GSHTrans/src/VectorFieldOld/: VectorFieldBase.h  VectorFieldExpressions.h  VectorFieldOverloads.h
cmake/: FindFFTW.cmake
examples/: CMakeLists.txt  CoefficientExample.cpp  FFTWExample.cpp  FieldExample.cpp  GridExample.cpp  IndexingTest.cpp  LegendreExample.cpp  PlanExample.cpp  QuadExample.cpp  ScalarFieldExample.cpp  Views.cpp  WignerExample.cpp
include/: CMakeLists.txt  GSHT.h
include/src/: Indexing.h  Legendre.h  Wigner.h
src/: CMakeLists.txt  Legendre.h
tests/: CMakeLists.txt  CheckAdditionTheorem.h  CheckCoeff2Coeff.h  CheckLegendre.h  CheckUpperIndexZero.h  CheckWigner.h  TestGaussLegendreGrid.cpp  TestWigner.cpp
